# plus-backend

./: .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  deny.toml  flake.nix  rust-toolchain.toml  rustfmt.toml  treefmt.nix
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: vrh3bq70cz9bm94356xmspma5y0k2wfb-source  z1s74v6wi5c63hnawy4c3bbd196xzgrw-source
.github/workflows/: push.yaml
.zed/: settings.json
crates/tebex/: Cargo.toml
crates/tebex/src/: lib.rs
crates/tebex/src/apis/: mod.rs
crates/tebex/src/apis/plugin/: customer_purchases.rs  mod.rs
crates/tebex/src/webhooks/: axum.rs  mod.rs  tests.rs  types.rs
crates/tebex/src/webhooks/types/: mod.rs  payments.rs  webhooks.rs
crates/tebex/tests/: parsing.rs
crates/tebex/tests/payloads/: payment-completed-2.json  payment-completed.json  validation.json
database/entities/: Cargo.toml  README.md
database/entities/src/entities/: asset.rs  bundles.rs  bundles_cosmetics.rs  collections.rs  cosmetic.rs  cosmetic_allowed_slot.rs  cosmetic_group.rs  cosmetic_group_allowed_slot.rs  cosmetic_package.rs  daily_playtime.rs  emote.rs  emote_package.rs  mod.rs  monthly_active_login.rs  player.rs  player_cosmetic.rs  player_equipped_cosmetic.rs  player_owned_cosmetic.rs  player_owned_emote.rs  prelude.rs  sea_orm_active_enums.rs  tags.rs  tags_cosmetic.rs  tracked_link_hits.rs  tracked_links.rs  transaction.rs  user.rs  user_cosmetic.rs
database/migrations/: Cargo.toml
database/migrations/src/: lib.rs  m20250810_210812_init.rs  m20250815_023013_create_users_table.rs  m20250917_163702_create_users_table.rs  m20250917_163707_create_cosmetics_table.rs  m20250917_163717_create_usercosmetics_table.rs  m20250928_175510_create_cosmeticpackage_table.rs  m20251014_222424_add_active_cosmetics.rs  m20260601_235900_extend_cosmetic_type_enum.rs  m20260602_000000_cosmetics_realtime_schema.rs  m20260620_000000_create_monthly_active_login.rs  m20260625_000000_add_hat_cosmetic.rs  m20260625_000001_shared_cosmetic_emote_id_seq.rs  m20260625_000002_add_aura_cosmetic.rs  m20260625_000003_add_boots_cosmetic.rs  m20260625_000004_add_shoulder_cosmetic.rs  m20260625_000005_create_cosmetic_groups.rs  m20260628_000000_add_particle_color.rs  m20260629_000000_create_daily_playtime.rs  m20260701_000000_add_stripe_price_id.rs  m20260701_000001_add_stripe_transaction_provider.rs  m20260701_000001_extend_stripe_transactions.rs  m20260701_000002_extend_stripe_transactions.rs  m20260701_000003_add_transaction_recipient.rs  m20260703_000000_logic_gifts_rewrite.rs  m20260704_000000_create_collections_table.rs  m20260704_000001_extend_cosmetics_info.rs  m20260704_000002_extend_emotes_info.rs  m20260704_000003_add_bundle_tables.rs  m20260704_000004_drop_emotes.rs  m20260705_000000_create_tags_tables.rs  m20260705_000001_extend_user_payment_info.rs  m20260705_000002_extend_collections.rs  m20260708_000000_extend_tags_type.rs  m20260708_000001_extend_tags_table.rs  m20260710_000000_extend_cosmetics_info.rs  m20260711_000000_add_cosmetic_cover.rs  m20260717_000000_add_cosmetic_trigram_search.rs  m20260720_000000_create_tracked_links.rs  main.rs
render-service/: .gitignore  README.md  package-lock.json  package.json
render-service/scripts/: fetch-default-skin.mjs
render-service/src/: server.js
render-service/tools/: build-bundle.mjs  package-lock.json  package.json
scripts/: dev-capes.json  gen-entities.sh  populate-db.sql  run-local-dev.sh  seed-bundles.py  seed-dev-assets.sh  seed-misc-cosmetics.py  start-dev-env.sh
src/: database.rs  main.rs
src/api/: admin_auth.rs  analytics.rs  assets.rs  links.rs  mod.rs  players.rs  state.rs  transactions.rs
src/api/account/: admin_allowlist.rs  login.rs  mod.rs
src/api/account/msa/: callback.rs  mod.rs  start.rs
src/api/bundles/: mod.rs  search.rs  view.rs
src/api/bundles/manage/: create.rs  delete.rs  mod.rs  update.rs
src/api/category/: list.rs  mod.rs
src/api/collections/: create.rs  delete.rs  edit.rs  list.rs  mod.rs  view.rs
src/api/cosmetics/: cover.rs  get_player.rs  grant.rs  grant_emote.rs  list.rs  list_capes.rs  list_emotes.rs  mod.rs  put_player.rs  search.rs  set_enabled.rs  upload_cape.rs  upload_cosmetic.rs  upload_emote.rs  view.rs
src/api/cosmetics/manage/: create.rs  delete.rs  mod.rs  render_cover.rs  update.rs
src/api/payments/: mod.rs  restore.rs  tebex_webhook.rs  webhook.rs
src/api/stripe/: create.rs  mod.rs  pricing.rs  products.rs  webhook.rs
src/api/tags/: apply.rs  create.rs  list.rs  mod.rs  remove.rs
src/api/transactions/: mod.rs  player.rs
src/api/websocket/: endpoint.rs  mod.rs  structs.rs
src/commands/: mod.rs
