[workspace]
members = [".", "crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
reqwest = { version = "0.12.22", features = ["gzip", "deflate", "brotli", "zstd", "native-tls", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"

[package]
name = "plus-backend"
version = "0.1.0"
edition.workspace = true
license-file = "LICENSE.md"
publish = false

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
aide = { version = "0.15.0", features = ["scalar", "macros", "axum", "axum-json"] }
bpaf = { version = "0.9.20", features = ["bright-color", "derive"] }
diesel = { version = "2.2.12", features = ["postgres"] }
thiserror.workspace = true
serde_json.workspace = true
