[workspace]
members = [".", "database/*", "crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tracing = "0.1.41"
tokio = { version = "1.47.1", features = ["full"] }
# SeaORM
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"] }
sea-orm-migration = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

[workspace.dependencies.reqwest]
version = "0.12.22"
default-features = false
features = [
    "charset",
    "gzip", "deflate", "brotli", "zstd",
    "json",
    "rustls-tls-native-roots"
]

[package]
name = "plus-backend"
version = "0.1.0"
edition.workspace = true
license-file = "LICENSE.md"
publish = false

[dependencies]
tokio.workspace = true
tower = "0.5.2"
axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
aide = { version = "0.15.0", features = ["scalar", "macros", "axum", "axum-json"] }
bpaf = { version = "0.9.20", features = ["bright-color", "derive"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace"] }
sea-orm.workspace = true

# Workspace dependencies
tebex = { path = "./crates/tebex", features = ["axum"]}
migrations = { path = "./database/migrations" }
entities = { path = "./database/entities" }
