[workspace]
members = [".", "database/*", "crates/*"]

[workspace.package]
edition = "2024"
repository = "https://github.com/Polyfrost/plus-backend"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tracing = "0.1.41"
tokio = { version = "1.47.1", features = ["full"] }
# Axum
aide = { version = "0.15.0", features = [
    "scalar", "swagger", "redoc", "macros",
    "axum", "axum-json", "axum-query"
] }
schemars = { version = "0.9.0", features = ["derive", "uuid1"] } # Locked to aide's version
axum = { version = "0.8.4", features = ["http2", "macros", "ws", "multipart"] }
axum-core = { version = "0.5.2" }
axum-client-ip = { version = "1.1.3", features = ["forwarded-header"] }
# SeaORM
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"] }
sea-orm-migration = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

[workspace.dependencies.reqwest]
version = "0.12.22"
default-features = false
features = [
    "charset",
    "gzip", "deflate", "brotli", "zstd",
    "json",
    "rustls-tls-native-roots"
]

[package]
name = "plus-backend"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license-file = "LICENSE.md"
publish = false

[dependencies]
# Workspace dependencies
tebex = { path = "./crates/tebex", features = ["axum", "validate-source-ip"]}
migrations = { path = "./database/migrations" }
entities = { path = "./database/entities" }
# Normal dependencies
tokio.workspace = true
tower = "0.5.2"
axum.workspace = true
axum-client-ip.workspace = true
aide.workspace = true
schemars.workspace = true
bpaf = { version = "0.9.20", features = ["bright-color", "derive"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace"] }
sea-orm.workspace = true
reqwest.workspace = true
uuid = { version = "1.18.0", features = ["v5", "v7"] }
pasetors = "0.7.7"
http = "1.3.1"
rust-s3 = { version = "0.37.0", default-features = false, features = ["fail-on-err", "tokio-rustls-tls"] }
serde_with = "3.15.0"
moka = { version = "0.12.11", features = ["future"] }
rand = { version = "0.9.2" }
base64 = { version = "0.22.1" }
sha2 = { version = "0.10.9" }
urlencoding = { version = "2.1.3" }
