[package]
name = "tebex"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hmac = { version = "0.12.1", features = ["std"] }
base16ct = { version = "0.2.0", features = ["std"] }
sha2 = { version = "0.10.9", default-features = false }
axum-core = { version = "0.5.2", optional = true }
tracing.workspace = true
http = "1.3.1"
iso_currency = { version = "0.5.3", features = ["with-serde"] }
iso_country = { version = "0.1.4", features = ["serde"] }
serde_repr = "0.1.20"

[features]
default = []
axum = ["dep:axum-core"]
