[package]
name = "tebex"
version = "0.1.0"
publish = false # TODO remove
edition.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hmac = { version = "0.12.1", features = ["std"] }
base16ct = { version = "0.2.0", features = ["std"] }
sha2 = { version = "0.10.9", default-features = false }
tracing.workspace = true
http = "1.3.1"
iso_currency = { version = "0.5.3", features = ["with-serde"] }
iso_country = { version = "0.1.4", features = ["serde"] }
serde_repr = "0.1.20"
# Axum
axum-core = { workspace = true, optional = true }
axum-client-ip = { workspace = true, features = [], optional = true }

[features]
default = []
axum = ["dep:axum-core"]
validate-source-ip = ["axum", "dep:axum-client-ip"]
